--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" language="javascript" src="whitney.json"></script>
     
     <script type="text/javascript">
-        $.getJSON("france.json", function (data) {
+        $.getJSON("fr_time.json", function (data) {
                 var timeline_json = data;
             window.timeline = new TL.Timeline('timeline-embed', timeline_json);
             });
