--- a/index.html
+++ b/index.html
@@ -1,58 +1,72 @@
 <html>
+  <head>
+    <link
+      title="timeline-styles"
+      rel="stylesheet"
+      href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css" />
+    <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript">
+      $.getJSON("timelines.json", function (data) {
+        var timelines = data;
+        var select = $("#timelines");
 
-<head>
-  <link title="timeline-styles" rel="stylesheet"
-    href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css" />
-  <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script type="text/javascript">
+        $.each(timelines, function (index, timeline) {
+          var option = $("<option></option>")
+            .attr("value", index)
+            .text(timeline.title.text.headline);
+          select.append(option);
+        });
 
-    $.getJSON("timelines.json", function (data) {
-      var timelines = data;
-      var select = $("#timelines");
+        select.change(function () {
+          var index = $(this).val();
+          var timeline = timelines[index];
+          window.timeline = new TL.Timeline("timeline-embed", timeline);
+        });
 
-      $.each(timelines, function (index, timeline) {
-        var option = $("<option></option>")
-          .attr("value", index)
-          .text(timeline.title.text.headline);
-        select.append(option);
+        select.trigger("change");
       });
-
-      select.change(function () {
-        var index = $(this).val();
-        var timeline = timelines[index];
-        window.timeline = new TL.Timeline("timeline-embed", timeline);
-      });
-
-      select.trigger("change");
-    });
-
-  </script>
-  <style>
-    #timeline-embed {
-      width: 100%;
-      height: 100%;
-    }
-
-    @media (max-width: 1000px) {
-      .tl-timeline p {
-        font-size: 36px !important;
+    </script>
+    <style>
+      #timeline-embed {
+        width: 100%;
+        height: 100%;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <div style="display: flex; flex-direction:column; align-items:center ">
-    <h3>Choose a timeline</h3>
-    <div>
-      <select id="timelines">
-      </select>
+      * {
+        font: 1.2rem "Fira Sans", sans-serif;
+      }
+
+      .header {
+        text-align: center;
+        margin-bottom: 55px;
+      }
+
+      select {
+        padding: 15px;
+        margin: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      @media (max-width: 1000px) {
+        .tl-timeline p {
+          font-size: 36px !important;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div style="display: flex; flex-direction: column; align-items: center">
+      <div>
+        <select id="timelines"></select>
+      </div>
     </div>
-  </div>
 
-  <div id="timeline-embed"></div>
-</body>
-
+    <div id="timeline-embed"></div>
+  </body>
 </html>
